calico-enterprise_versioned_docs/version-3.14/operations/cnx/authentication-quickstart.mdx
---
title: Authentication quickstart
description: Use default token authentication to log in to Calico Enterprise Manager UI and Kibana.
---

## Big picture

Get started quickly with our default token authentication to log in to {{prodname}} Manager UI and Kibana.

## Concepts

### Authentication defaults

Token authentication is the default authentication option for {{prodname}} Manager. When a service account is created, an
associated secret is created that contains a signed bearer token for that service account. Just copy the token for the service
account in to the Manager UI and log in.

Use basic login for the default Kibana root user.

The default login methods are always available at:

- **{{prodname}} Manager:** `https://<host>:<port>/login/token`.
- **Kibana:** `https://<host>:<port>/tigera-kibana/login`.

## Before you begin

Make sure you have installed {{prodname}} using one of the [installation guides](../../getting-started/index.mdx) and have set up [access to the Manager UI](access-the-manager.mdx).

## How to

:::note

For OpenShift, replace `kubectl` with `oc` in the following commands.

:::

**Log in to {{prodname}} Manager**

First, create a service account in the desired namespace:

```bash-plain-text
kubectl create sa <user> -n <namespace>
```

Give the service account permissions to access the {{prodname}} Manager UI, and a {{prodname}} cluster role:

```bash-plain-text
kubectl create clusterrolebinding <binding_name> --clusterrole <role_name> --serviceaccount <namespace>:<service_account>
```

where:

- **binding_name** is a descriptive name for the rolebinding.
- **role_name** is one of the default cluster roles (or a custom cluster role) specifying {{prodname}} UI permissions.
- **namespace** is the service account's namespace.
- **service_account** is the service account that the permissions are being associated with.

For example, the following command gives the service account, `jane` in the default namespace network admin permissions:

```bash-plain-text
kubectl create clusterrolebinding jane-access --clusterrole tigera-network-admin --serviceaccount default:jane
```

Next, get the token from the service account.
Using the running example of a service account named, `jane` in the default namespace:

```bash-plain-text
kubectl get secret $(kubectl get serviceaccount jane -o jsonpath='{range .secrets[*]}{.name}{"\n"}{end}' | grep token) -o go-template='{{.data.token | base64decode}}' && echo
```

Now that you have the token, log in to the {{prodname}} UI and submit the token.

`https://<host>:<port>/login/token`

**Log in to Kibana**

Connect to Kibana with the `elastic` username. Use the following command to decode the password:

```
kubectl -n tigera-elasticsearch get secret tigera-secure-es-elastic-user -o go-template='{{.data.elastic | base64decode}}' && echo
```

Once logged in, you can configure users and their privileges from the settings page.

## Above and beyond

- [Configure user roles and permissions](roles-and-permissions.mdx)
- [Configure an external identity provider](configure-identity-provider.mdx)
- [Configure RBAC for tiered policies](../../network-policy/policy-tiers/rbac-tiered-policies.mdx)
- [Configure RBAC for Elasticsearch](../../visibility/elastic/rbac-elasticsearch.mdx)
